# symref

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
src/: deref.rs  lib.rs  main.rs  naming.rs  store.rs  types.rs
tests/: deref_tests.rs  store_tests.rs
tests/fixtures/: template.json  validated.json
